# building-agent

./: .env.example  .gitignore  LICENSE  README.md  TUTORIAL.md  config.yaml  pyproject.toml  requirements.txt  tile_grid.py  tiles.json  tutorial_run.py
.streamlit/: config.toml
agent/: __init__.py  addresses.py  city_audit.py  classifier.py  config.py  detector.py  export.py  farming.py  geocode.py  imagery.py  land_use.py  models.py  pipeline.py  recommendations.py  scheduler.py  solar.py  store.py  training.py  vectorize.py
app/: streamlit_app.py
notebooks/: building_agent.ipynb
scripts/: run_scan.sh  run_training.sh
tests/: conftest.py  test_classifier.py  test_config.py  test_store.py
